[tool.poetry]
name = "webpage_poke"
version = "0.1.0"
description = ""
authors = ["Max Fischer <max.fischer@diva-e.com>"]

[tool.poetry.scripts]
poke = "webpage_poke.run:main"

[tool.poetry.dependencies]
python = "^3.6"
selenium = "^3.141"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"